--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "test": "yarn build:release && yarn test:unit && yarn test:simulate",
     "test:simulate": "cargo test -- --nocapture",
     "clean": "rm -rf ./build && rm -rf ./neardev && rm -rf ./target",
-    "deploy": "cd scripts && ./deploy.sh"
+    "deploy": "./scripts/1.deploy.sh"
   },
   "keywords": [],
   "author": "support@graate.org",
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
-    "near-sdk-as": "^3.0.0"
+    "near-sdk-as": "^3.2.3"
   }
 }
